[gd_scene load_steps=5 format=2]

[ext_resource path="res://meteorBig.png" type="Texture" id=1]
[ext_resource path="res://Meteor.gd" type="Script" id=2]
[ext_resource path="res://Space_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Standard_Font_Oswald.tres" type="DynamicFont" id=4]

[node name="Meteor" type="Area2D" groups=[
"damageable",
]]
collision_layer = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
maxSpeed = 30
minRotationRate = -20
maxRotationRate = 20

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -18, -16, 6, -22, 24, -6, 27, 13, 6, 22, -8, 11, -21, 11, -27, -3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.500003, -0.500001 )
scale = Vector2( 2.85, 2.35 )

[node name="MeteorHUD" type="CanvasLayer" parent="."]

[node name="MeteorHealth" type="Label" parent="MeteorHUD"]
margin_left = 1.0
margin_top = 26.0
margin_right = 78.0
margin_bottom = 40.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
text = "TEXT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
